# embedding-foundation-mcp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  requirements.txt
apps/api/: main.py
apps/worker-rust/: Cargo.toml
apps/worker-rust/src/: main.rs
crates/foundation-core/: Cargo.toml
crates/foundation-core/src/: lib.rs
crates/foundation-graph/: Cargo.toml
crates/foundation-graph/src/: lib.rs
crates/foundation-linalg/: Cargo.toml
crates/foundation-linalg/src/: lib.rs
crates/foundation-python/: Cargo.toml
crates/foundation-python/src/: lib.rs
crates/foundation-retrieval/: Cargo.toml
crates/foundation-retrieval/src/: lib.rs
python/app/: main.py
python/app/learning/: formatter.py
python/app/mcp/: server.py
python/app/routes/: health.py
python/app/schemas/: contracts.py
python/app/services/: execution_router.py
python/app/visualization/: renderer.py
tests/contract/: test_health.py
tests/correctness/: test_tool_contracts.py
tests/evals/: test_learning_output.py
tests/load/: test_health_smoke.py
